# stoz-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: stoz.hpp
src/: main.cpp  stoz.cpp
